# NimbusPDF

./: .env.example  .gitignore  BUG-and-FIXES.md  PDF-Reader-AI-Helper.md  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml  Dockerfile
backend/config/: ai_system_prompt.keypoints.md  ai_system_prompt.md  ai_system_prompt.summary.md  default.toml
backend/src/: config.rs  gdrive.rs  main.rs  pdf_text.rs  session.rs
backend/src/ai/: mod.rs
backend/src/auth/: mod.rs
backend/src/routes/: ai.rs  auth.rs  categories.rs  highlights.rs  memory.rs  mod.rs  notes.rs  pdfs.rs
backend/src/storage/: local.rs  mod.rs
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.js
frontend/src/lib/components/: AISidebar.svelte  CategoryManager.svelte  MemoryEditor.svelte  Notes.svelte  PDFViewer.svelte
frontend/src/lib/stores/: auth.js  pdf.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/categories/: +page.svelte
frontend/src/routes/memory/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/viewer/[docId]/: +page.svelte
